2009-03-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/fieldtypes.cc: Avoid an extra 
	update_meta_store() when exceptions are disabled.
	* glom/navigation/box_tables.cc: fill_table_row(): Avoid a crash when 
	the TableInfo is null.

2009-03-13  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool_backends/postgres.cc: Fix the build when 
	GLOM_CONNECTION_DEBUG is defined.

2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/Makefile.am: Do not install some headers that are for 
	API that I do not really want other people to use.

2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/adddel/eggcolumnchooser/: Copy a newer version from 
	libegg, which already fixed the use of deprecated GTK+ macros.
	* glom/utility_widgets/flowtable.cc:
	* glom/utility_widgets/flowtable.h: child_type_vfunc(): Use GType instead 
	of deprecated GtkType.
	This mostly fixes bug #575021 (André Klapper).

2009-03-12  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Rename to configure.ac, because configure.in is 
	deprecated by recent autotools.
	
2009-03-12  Armin Burgmeier  <armin@openismus.com>

	* configure.in: Added config.h to AC_CONFIG_FILES, so that we create
	two config files: config.h with all definitions, and libglom_config.h
	which contains only definitions prefixed with GLOM_ to be installed.
	This means header files cannot use non-prefixed definitions.

	* glom/libglom/libglom_config.h.in: New file containing the
	definitions to be installed.

	* glom/libglom/connectionpool_backends/postgres_self.cc:
	* glom/libglom/data_structure/iso_codes.cc:
	* glom/translation/window_translations.cc:
	* glom/utility_widgets/calendar/glomgtkcalendar.h:
	* glom/utility_widgets/calendar/glomgtkcalendar.c:
	* glom/application.cc:
	* glom/main.cc: Adapt the code by including config.h instead of
	libglom_config.h.

1.9.4:

2009-03-10  Armin Burgmeier  <armin@openismus.com>
